--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     </div>
     <!-- rules to the game -->
     <div class="info_list">
-      <div class="info">🂱 you have only <span>60 seconds</span> per question.</div>
-      <div class="info">🂢 once you select an answer, you can't unselect.</div>
-      <div class="info">🂣 when timer goes off, you cant select an answer.</div>
-      <div class="info">🂤 while playing the game, you can't exit the quiz. </div>
-      <div class="info">🂥 you get points if you answer correctly.</div>
+      <div class="info">1 you have only <span>60 seconds</span> per question.</div>
+      <div class="info">2 once you select an answer, you can't unselect.</div>
+      <div class="info">3 when timer goes off, you cant select an answer.</div>
+      <div class="info">4 while playing the game, you can't exit the quiz. </div>
+      <div class="info">5 you get points if you answer correctly.</div>
     </div>
   <div class="buttons">
     <button class="highScores">hi scores</button>
