fixed js for high score screen

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <!-- submit initials and play again or quit option -->
   <p>enter initials & hit submit</p>
   <form id="myForm">
-    <input type="text" name="fname">
+    <input type="text" name="fname" id="name">
     <button>submit</button>
   </form>
   <div class="buttons">
