making button work

--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
-    
     <title>code quiz</title>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-   
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
 </head>
 
 <body>
   <!-- start the game -->
   <div class="start_btn"><button>Start Quiz</button></div>
-    
   <div class="info_box">
     <div class="info_title">
       <span>the rules</span>
@@ -44,7 +43,6 @@
        <div class="time_text">count down</div>
          <div class="timer_sec">60</div>
      </div>
-  
    </header>
    <section>
      <div class="que_text">
@@ -56,12 +54,12 @@
    <footer>
      <div class="total_que">
      </div>
-     <button class="next_btn"> <i class="far fa-hand-point-right">=></i></button>
+     <button class="next_btn"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button>
    </footer>
  </div>
  <div class="result_box">
    <div class="icon">
-    <i class="fas fa-robot fa-2x"></i>
+    <i class="fa fa-gamepad" aria-hidden="true"></i>
    </div>
    <!-- completed gamne -->
    <div class="complete_text">done</div>
@@ -79,6 +77,6 @@
   </div>
  </div>
 </body>
-<script src="app.js">
-  </script>
+<script src="app.js"></script>
+  
 </html>
