added showScores to button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="info">5 you get points if you answer correctly.</div>
     </div>
   <div class="buttons">
-    <button class="highScores">hi scores</button>
+    <button class="highScores" id="highScores">hi scores</button>
     <button class="quit">get out!</button>
     <button class="restart">keep goin'</button>
     </div>
