worked on js and local storage

--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
     </div>
     <!-- rules to the game -->
     <div class="info_list">
+      <div class="scores-container">
       <div class="info">1 you have only <span>60 seconds</span> per question.</div>
       <div class="info">2 once you select an answer, you can't unselect.</div>
       <div class="info">3 when timer goes off, you cant select an answer.</div>
       <div class="info">4 while playing the game, you can't exit the quiz. </div>
       <div class="info">5 you get points if you answer correctly.</div>
     </div>
+  </div>
   <div class="buttons">
     <button class="highScores" id="highScores">hi scores</button>
+    <div class="scores-container"></div>
     <button class="quit">get out!</button>
     <button class="restart">keep goin'</button>
     </div>
